--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ input {
 }
 
 button {
-  background-color: #4caf50;
-  color: white;
+  background-color: #fffb01;
+  color: rgb(0, 0, 0);
   padding: 12px 20px;
   border: none;
   cursor: pointer;
